--- a/Taller_6/app/src/main/res/layout/twopane_container.xml
+++ b/Taller_6/app/src/main/res/layout/twopane_container.xml
@@ -14,7 +14,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/detail_fragment"
+        android:id="@+id/seasons_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
