--- a/Taller_6/app/src/main/res/layout/principal_container.xml
+++ b/Taller_6/app/src/main/res/layout/principal_container.xml
@@ -2,15 +2,15 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.VentanaPrincipalActivity">
+    android:background="#536465">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_series"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -22,7 +22,8 @@
         android:layout_gravity="bottom"
         android:backgroundTint="@color/colorPrimaryDark"
         app:fabCradleRoundedCornerRadius="50dp"
-        app:navigationIcon="@drawable/ic_menu"/>
+        app:navigationIcon="@drawable/ic_menu"
+        app:hideOnScroll="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_series"
