--- a/Taller_6/app/src/main/res/values/colors.xml
+++ b/Taller_6/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#8BC34A</color>
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorAccent">#FF5252</color>
+
+    <color name="transparente_gris">#969C9B9B</color>
+    <color name="transparentFont">#4dffffff</color>
 </resources>
