--- a/Taller_6/app/src/main/res/layout/chapters_layout.xml
+++ b/Taller_6/app/src/main/res/layout/chapters_layout.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/seasons_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/layoutBackground"
     android:padding="12dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/seasons_recyclerview"
+        android:id="@+id/chapters_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
