--- a/Taller_6/app/src/main/res/layout/principal_container.xml
+++ b/Taller_6/app/src/main/res/layout/principal_container.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#536465">
+    android:background="@color/layoutBackground">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_series"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="15dp"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/series_bab"
@@ -22,15 +20,15 @@
         android:layout_gravity="bottom"
         android:backgroundTint="@color/colorPrimaryDark"
         app:fabCradleRoundedCornerRadius="50dp"
-        app:navigationIcon="@drawable/ic_menu"
-        app:hideOnScroll="true"/>
+        app:hideOnScroll="true"
+        app:navigationIcon="@drawable/ic_menu" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_series"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_anchor="@id/series_bab"
         android:backgroundTint="@color/colorAccent"
-        android:src="@drawable/ic_home"/>
+        android:src="@drawable/ic_home"
+        app:layout_anchor="@id/series_bab" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
