--- a/Taller_6/app/src/main/res/layout/series_item.xml
+++ b/Taller_6/app/src/main/res/layout/series_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="8dp">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:minHeight="200dp"
         android:backgroundTint="@color/transparentFont"
+        android:minHeight="200dp"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
@@ -27,21 +27,19 @@
                 android:gravity="center"
                 android:text="Título"
                 android:textSize="22dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/serie_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/placeholder_blue"
-                android:layout_weight="1"/>
-
+                android:layout_weight="1"
+                android:src="@drawable/placeholder_blue" />
 
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
 
 
 </LinearLayout>
